# gpuNUFFT

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  MANIFEST.in  README  README.md  RELEASENOTES.txt  TODO.md  TODO.txt  VERSION.txt  setup.py  test_gpuNUFFT_python.ipynb
CUDA/: CMakeLists.txt
CUDA/cmake_modules/: FindGPUNUFFT.cmake  FindGpuNUFFT.cmake
CUDA/doc/: CMakeLists.txt  Doxyfile  mainpage.dox
CUDA/inc/: balanced_gpuNUFFT_operator.hpp  balanced_operator.hpp  balanced_texture_gpuNUFFT_operator.hpp  config.hpp.cmake  cuda_utils.cuh  cuda_utils.hpp  cufft_config.hpp.cmake  gpuNUFFT_cpu.hpp  gpuNUFFT_kernels.hpp  gpuNUFFT_operator.hpp  gpuNUFFT_operator_factory.hpp  gpuNUFFT_types.hpp  gpuNUFFT_utils.hpp  matlab_helper.h  precomp_kernels.hpp  precomp_utils.hpp  texture_gpuNUFFT_operator.hpp
CUDA/src/: CMakeLists.txt  balanced_gpuNUFFT_operator.cpp  balanced_texture_gpuNUFFT_operator.cpp  gpuNUFFT_operator.cpp  gpuNUFFT_operator_factory.cpp  gpuNUFFT_utils.cpp  texture_gpuNUFFT_operator.cpp
CUDA/src/cpu/: gpuNUFFT_cpu.cpp
CUDA/src/gpu/: CMakeLists.txt  precomp_kernels.cu  std_gpuNUFFT_kernels.cu
CUDA/src/gpu/atomic/: CMakeLists.txt  atomic_gpuNUFFT.cu  atomic_gpuNUFFT_kernels.cu  texture_gpuNUFFT_kernels.cu
CUDA/src/gpu/coarse/: CMakeLists.txt  coarse_gpuNUFFT.cu  gpuNUFFT_kernels.cu  texture_gpuNUFFT_kernels.cu
CUDA/src/gpu/matlab/: CMakeLists.txt  gpuNUFFT_adj.cpp  gpuNUFFT_forw.cpp  gpuNUFFT_operator_matlabfactory.cpp  gpuNUFFT_operator_matlabfactory.hpp
CUDA/src/gpu/matlab/precomputation/: CMakeLists.txt  gpuNUFFT_precomp.cpp
CUDA/src/gpu/matlab/sparse/: README.txt  tikreg_gridding_forward_gpu.cu  tikreg_gridding_gpu.cu
CUDA/src/gpu/python/: CMakeLists.txt  gpuNUFFT_operator_python_factory.cpp
CUDA/test/: CMakeLists.txt
CUDA/test/cpu/: CMakeLists.txt  gpuNUFFT_operator_factory_tests.cpp  gpuNUFFT_precomputation_tests.cpp  gpuNUFFT_tests.cpp
CUDA/test/gpu/: gpuNUFFT_2D_conv_tests.cpp  gpuNUFFT_conv_tests.cpp  gpuNUFFT_deapo_tests.cpp  gpuNUFFT_fft_tests.cpp
CUDA/test/gpu/forward/: gpuNUFFT_forward_tests.cpp
gpuNUFFT/: cg_sense_3d.m  inversegrid_multicoil_gpu.m  inversegrid_singlecoil_gpu.m  regrid_multicoil_gpu.m  regrid_singlecoil_gpu.m
inc/: balanced_gpuNUFFT_operator.hpp  balanced_gridding_operator.hpp  config.hpp  config.hpp.cmake  cuda_utils.cuh  cuda_utils.hpp  cufft_config.hpp.cmake  gpuNUFFT_cpu.hpp  gpuNUFFT_kernels.hpp  gpuNUFFT_operator.hpp  gpuNUFFT_operator_factory.hpp  gpuNUFFT_types.hpp  gpuNUFFT_utils.hpp  griddingFunctions.h  griddingFunctions.hpp  gridding_cpu.hpp  gridding_gpu.hpp  gridding_kernels.hpp  gridding_operator.hpp  gridding_operator_factory.hpp  gridding_operator_matlabfactory.hpp  gridding_types.hpp  gridding_utils.hpp  matlab_helper.h  precomp_kernels.hpp  precomp_utils.hpp  texture_gpuNUFFT_operator.hpp  texture_gridding_operator.hpp
matlab/: MREG_adjoint_test.m  NUFFT_recon_demo_2D.m  README  assign_sectors.m  cgsense_gpu_shepplogan.m  dataRadial.mat  fft_adjoint_test.m  fft_shift_tests.m  fft_tests.m  grid3D.m  gridkb.m  modified_MREG_adjoint_test.m  run_matlab_script  run_tests.sh  script.out  sector_centers_32.mat  show3DImageasArray.m  show_cuda_pc_results.m  sparse_MREG_adjoint_test.m  temp_compute_profiler_2_0.csv  test_big.asv  test_big.m  test_gpuNUFFT_Operator.m  test_gpuNUFFT_Operator_script.m  test_gpuNUFFT_atomic_Operator_script.m  test_gpuNUFFT_sparse_Operator_script.m  test_gridding3D.m  test_gridding3D_Operator.m  test_gridding3D_Operator_2D_data.m  test_gridding3D_Operator_2D_data2d.m  test_gridding3D_Operator_2D_data_script.m  test_gridding3D_Operator_2D_data_script_cpu.m  test_gridding3D_Operator_forward.m  test_gridding3D_Operator_script.m  test_gridding3D_Operator_simple.m  test_gridding3D_atomic_Operator_script.m  test_gridding3D_deapodized.m  test_gridding3D_sparse_Operator_2D_data_script.m  test_gridding3D_sparse_Operator_script.m  test_kspace_plot.m  (+1 more)
src/: CMakeLists.txt  balanced_gridding_operator.cpp  gridding3D.cu  gridding3D_cpu.cpp  gridding3D_kernels.cu  griddingFunctions.cc  griddingFunctions.cpp  gridding_gpu.cu  gridding_operator.cpp  gridding_operator_factory.cpp  gridding_operator_matlabfactory.cpp  gridding_utils.cpp  texture_gridding_operator.cpp
src/cpu/: gpuNUFFT_cpu.cpp  gridding3D_cpu.cpp
src/gpu/: CMakeLists.txt  gridding_gpu.cpp  gridding_gpu.cu  precomp_kernels.cu  precomp_utils.cu  std_gpuNUFFT_kernels.cu  std_gridding_kernels.cu
src/gpu/atomic/: CMakeLists.txt  atomic_gpuNUFFT_kernels.cu  atomic_gridding.cu  atomic_gridding_gpu.cu  atomic_gridding_kernels.cu  texture_gpuNUFFT_kernels.cu  texture_gridding_kernels.cu
src/gpu/atomic/matlab/: CMakeLists.txt
src/gpu/coarse/: CMakeLists.txt  coarse.cu  coarse_gridding.cu  gpuNUFFT_kernels.cu  gridding_gpu.cu  gridding_kernels.cu  gridding_kernels.cuh  gridding_kernels.hpp  texture_gpuNUFFT_kernels.cu  texture_gridding_kernels.cu
src/gpu/coarse/matlab/: CMakeLists.txt
src/gpu/matlab/: CMakeLists.txt  gpuNUFFT_operator_matlabfactory.hpp  gridding3D_adj.cpp  gridding3D_forw.cpp  gridding3D_mex.cpp  gridding_operator_matlabfactory.cpp  gridding_operator_matlabfactory.hpp
src/gpu/matlab/precomputation/: CMakeLists.txt  griddingND_precomp.cpp  gridding_operator_matlabfactory.cpp  gridding_operator_matlabfactory.hpp
src/gpu/matlab/sparse/: CMakeLists.txt  tikreg_gridding_forward_gpu.cu  tikreg_gridding_forward_gpu_f.cu  tikreg_gridding_gpu.cu  tikreg_gridding_gpu_f.cu  tikreg_gridding_kernels.cu
src/matlab/: CMakeLists.txt  gridding3D_mex.cpp
test/: CMakeLists.txt  gridding3DGPU_tests.cpp  gridding3D_tests.cc  gridding3D_tests.cpp
test/cpu/: CMakeLists.txt  gpuNUFFT_kernel_tests.cpp  gpuNUFFT_precomputation_tests.cpp  gridding3D_kernel_tests.cpp  gridding3D_operator_factory_tests.cpp  gridding3D_precomputation_tests.cpp  gridding3D_tests.cpp
test/gpu/: gpuNUFFT_2D_conv_tests.cpp  gridding2DGPU_conv_tests.cpp  gridding3DGPU_conv_tests.cpp  gridding3DGPU_deapo_tests.cpp  gridding3DGPU_fft_tests.cpp  gridding3DGPU_tests.cpp
test/gpu/forward/: gridding3DGPU_forward_tests.cpp
(+92 files in other folders)
