MESSAGE(STATUS "MEX file")

MESSAGE(STATUS "Using MATLAB MX LIB: ${Matlab_MX_LIBRARY}")
MESSAGE(STATUS "Using MATLAB MEX LIB: ${Matlab_MEX_LIBRARY}")
MESSAGE(STATUS "Using MATLAB INC DIR: ${Matlab_INCLUDE_DIRS}")

INCLUDE_DIRECTORIES(${Matlab_INCLUDE_DIRS})

set(MATLAB_SOURCES   ${CMAKE_CURRENT_SOURCE_DIR}/gpuNUFFT_operator_matlabfactory.hpp
										 ${CMAKE_CURRENT_SOURCE_DIR}/gpuNUFFT_operator_matlabfactory.cpp
                     ${MATLAB_HELPER_INCLUDE})

set(MEX_FILE gpuNUFFT_adj.cpp ${MATLAB_SOURCES})
set(MEX_FILE_FORW gpuNUFFT_forw.cpp ${MATLAB_SOURCES})

CUDA_COMPILE( mex_gpuNUFFT_adj_generated ${MEX_FILE} SHARED)
CUDA_COMPILE( mex_gpuNUFFT_forw_generated ${MEX_FILE_FORW} SHARED)

CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_NAME} SHARED ${mex_gpuNUFFT_adj_generated} ${MEX_FILE})
TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_NAME} ${Matlab_MEX_LIBRARY} ${Matlab_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_NAME})
SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)

CUDA_ADD_LIBRARY(${GRID_MEX_FORW_NAME} SHARED ${mex_gpuNUFFT_forw_generated} ${MEX_FILE_FORW})
TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_NAME} ${Matlab_MEX_LIBRARY} ${Matlab_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_NAME})
SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)

if(WIN32)
  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_NAME} PROPERTIES
						SUFFIX ".${Matlab_MEX_EXTENSION}"
						LINK_FLAGS /export:mexFunction)
  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES
						SUFFIX ".${Matlab_MEX_EXTENSION}"
						LINK_FLAGS /export:mexFunction)
else(UNIX)
  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_NAME} PROPERTIES SUFFIX ".${Matlab_MEX_EXTENSION}")
  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_NAME} PROPERTIES SUFFIX ".${Matlab_MEX_EXTENSION}")  
endif()

macro(exportMex mexName)
ADD_CUSTOM_COMMAND(TARGET ${mexName}
          POST_BUILD
          COMMAND ${CMAKE_COMMAND} -E copy "${LIBRARY_OUTPUT_PATH}/${mexName}.${Matlab_MEX_EXTENSION}" ${MEX_EXPORT_DIR}
)
endmacro()

exportMex(${GRID_MEX_ADJ_NAME})
exportMex(${GRID_MEX_FORW_NAME})

if(GEN_ATOMIC)
  CUDA_ADD_LIBRARY(${GRID_MEX_ADJ_ATM_NAME} SHARED ${mex_gpuNUFFT_adj_generated} ${MEX_FILE})
  TARGET_LINK_LIBRARIES(${GRID_MEX_ADJ_ATM_NAME} ${Matlab_MEX_LIBRARY} ${Matlab_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME})
  SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)

  CUDA_ADD_LIBRARY(${GRID_MEX_FORW_ATM_NAME} SHARED ${mex_gpuNUFFT_forw_generated} ${MEX_FILE_FORW})
  TARGET_LINK_LIBRARIES(${GRID_MEX_FORW_ATM_NAME} ${Matlab_MEX_LIBRARY} ${Matlab_MX_LIBRARY} ${CUDA_LIBRARIES} ${GRID_LIB_ATM_NAME})
  SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES PREFIX "" LINKER_LANGUAGE CXX)

  if(WIN32)
	SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES
						SUFFIX ".${Matlab_MEX_EXTENSION}"
						LINK_FLAGS /export:mexFunction)
	SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES
						SUFFIX ".${Matlab_MEX_EXTENSION}"
						LINK_FLAGS /export:mexFunction)
  else(UNIX)						
	SET_TARGET_PROPERTIES(${GRID_MEX_ADJ_ATM_NAME} PROPERTIES SUFFIX ".${Matlab_MEX_EXTENSION}")
	SET_TARGET_PROPERTIES(${GRID_MEX_FORW_ATM_NAME} PROPERTIES SUFFIX ".${Matlab_MEX_EXTENSION}")
  endif()
	exportMex(${GRID_MEX_ADJ_ATM_NAME})
	exportMex(${GRID_MEX_FORW_ATM_NAME})
endif()

ADD_SUBDIRECTORY(precomputation)
